2013-06-24 Massimo Manghi <mxmanghi@apache.org>
    * INSTALL: It must be made explicit installation is a two stage operation now

2013-06-24 Massimo Manghi <mxmanghi@apache.org>
    * rivet/packages/session/session-class.tcl: two new methods 'load' (loads a
    whole package data for a given package and session) and 'clear' (it deletes either 
    a whole package or a single data like for a session)

2013-06-22 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/mod_rivet.c: cleanup of unused code in mod_rivet.c. Adding comments
    to undocumented functions
    * src/parser/rivetParse.c: New TODO comment added 

2013-06-12 Massimo Manghi <mxmanghi@apache.org>
    * Makefile.am: splitting install targets into 'make install' (mod_rivet.so,
    librivet.so,librivetparser.so + Tcl commands in rivet/rivet-tcl) and 
    'make install-packages' (whole content of rivet/packages), thus decoupling
    binary and non binary installs. Notice: 'make install' creates a fully
    functional install of Rivet in case packages such as 'form', 'session', 
    'DIO' aren't needed.
    * rivet/rivet-tcl/xml.tcl: Adding svn:keywords Id to svn properties
    * doc/xml/install.xml: updating manual to document the new installation command
    sequence
    
2013-06-03 Massimo Manghi <mxmanghi@apache.org>
    * tclconfig/[ltmain.sh,compile,depcomp]: more libtool scripts updated 

2013-06-02 Massimo Manghi <mxmanghi@apache.org>
    * tclconfig/[install-sh,config.sub,config.guess]: new versions for script used by
    the autoconf/automake/libtool toolchain

2013-05-21 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/apache_request.c: ApacheRequest___parse further simplified and
    made less restrictive about the combination of method and mimetype of the request
    * src/apache-2/mod_rivet.c: add debug message in exit handler

2013-05-06 Massimo Manghi <mxmanghi@apache.org>
    * src/apache-2/rivetCore.c: call to 'panic' changed to fulfill the hardening